5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1798_2569.log
== TEST (2019-06-11 13:22:10) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
soma = 0
d = 0
for i in range(size(x)):
	soma=soma+x[i]
media = soma/size(x)
for i in range(size(x)):
	d =
	
-- ERROR:
File "XXXX", line 9
    d =
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 13:22:10) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
soma = 0
d = 0
for i in range(size(x)):
	soma=soma+x[i]
media = soma/size(x)
for i in range(size(x)):
	d =
	
-- ERROR:
File "XXXX", line 9
    d =
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 13:26:05) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
soma = 0
d = 0
for i in range(size(x)):
	soma=soma+x[i]
media = soma/size(x)
from math import*
for i in range(size(x)):
	d = d+ (x[i] - media)**2
	k = size(x)-1
	t = (d/k)*sqrt
print(round(j,3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 13:26:22) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
soma = 0
d = 0
for i in range(size(x)):
	soma=soma+x[i]
media = soma/size(x)
from math import*
for i in range(size(x)):
	d = d+ (x[i] - media)**2
	k = size(x)-1
	t = (d/k)**sqrt
print(round(j,3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 13:26:46) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
soma = 0
d = 0
for i in range(size(x)):
	soma=soma+x[i]
media = soma/size(x)
from math import*
for i in range(size(x)):
	d = d+ (x[i] - media)**2
	k = size(x)-1
	t = (d/k)**sqrt
print(round(t,3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 13:27:04) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
soma = 0
d = 0
for i in range(size(x)):
	soma=soma+x[i]
media = soma/size(x)
from math import*
for i in range(size(x)):
	d = d+ (x[i] - media)**2
	k = size(x)-1
	t = (d/k)*sqrt
print(round(t,3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 13:27:37) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
soma = 0
d = 0
for i in range(size(x)):
	soma=soma+x[i]
media = soma/size(x)
from math import*
for i in range(size(x)):
	d = d+ (x[i] - media)**2
	k = size(x)-1
	t = sqrt(d/k)
print(round(t,3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 13:27:49) 
-- CODE:
from numpy import*
x = array(eval(input("vetor: ")))
soma = 0
d = 0
for i in range(size(x)):
	soma=soma+x[i]
media = soma/size(x)
from math import*
for i in range(size(x)):
	d = d+ (x[i] - media)**2
	k = size(x)-1
	t = sqrt(d/k)
print(round(t,3))
	
-- EXECUTION TIME:
1.09725
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
